--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,35 +10,43 @@ services:
     volumes:
       - /app/node_modules
       - ./frontend:/app
-#     depends_on:
-#       mysql_test:
-#         condition: service_healthy
-#         restart: true
-#   api:
-#     build: ./server
-#     restart: always
-#     container_name: server
-#     ports:
-#       - '4000:4000'
-#     volumes:
-#       - /app/node_modules
-#       - ./server:/app
-#   mysql_test:
-#     image: mysql
-#     restart: always
-#     environment:
-#       MYSQL_ROOT_PASSWORD: password1
-#       MYSQL_DATABASE: test
-#     healthcheck:
-#       test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
-#       timeout: 20s
-#       retries: 10
-#     volumes:
-#       - mysql_data:/var/lib/mysql
-#   adminer:
-#     image: adminer
-#     restart: always
-#     ports:
-#       - '8888:8080'
-# volumes:
-#   mysql_data:
+    depends_on:
+      postgres:
+        condition: service_healthy
+        restart: true
+  api:
+    build: ./server
+    restart: always
+    container_name: api
+    ports:
+      - '4444:4444'
+    volumes:
+      - /app/node_modules
+      - ./server:/app
+    depends_on:
+      postgres:
+        condition: service_healthy
+        restart: true
+  postgres:
+    image: postgres
+    restart: always
+    container_name: DB
+    environment:
+      POSTGRES_PASSWORD: moneyadmin
+      POSTGRES_USER: admin
+      POSTGRES_DB: money_tracker
+    healthcheck:
+      test: pg_isready -h localhost -U $$POSTGRES_USER
+      interval: 5s
+      timeout: 10s
+      retries: 120
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+  adminer:
+    image: adminer
+    restart: always
+    container_name: adminer
+    ports:
+      - '8888:8080'
+volumes:
+  pg_data:
